--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,10 +1,32 @@
 html 
     head
-        title Login 
+        title Login
+        link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css")
     body 
-        if(message)
-            h4 #{message}
-        form(action = "/login" method = "POST")
-            input(name = "id" type = "text" required placeholder = "User ID")
-            input(name = "password" type = "password" required placeholder = "Password")
-            button(type = "Submit") Log in
+        //center content and create top margin of 5 units
+        .container.mt-5
+            //conditional message display
+            if message
+                //creates message box highlighted in blue
+                .alert.alert-info #{message}
+            
+            //center content
+            .row.justify-content-center
+                //take up 4 flexbox columns /12 on medium screen, 8 on small screens
+                .col-md-4.col-sm-8
+                    //center text and 4 unit bottom margin
+                    h2.text-center.mb-4 Log in
+                    //create signup box with border, 4 unit padding, round corners, drop shadow
+                    form(action="/login" method="POST" class="border p-4 rounded shadow")
+                        //bottom margin of 3 between form elements
+                        .mb-3
+                            //small bootstrap form field
+                            input.form-control.form-control-sm(name="id" type="text" required placeholder="User ID")
+                        .mb-3
+                            input.form-control.form-control-sm(name="password" type="password" required placeholder="Password")
+                        //d-grid stretches login button across entire login box
+                        .d-grid.gap-2
+                            //btn makes button, btn-primary colors it blue, btn-sm makes it smaller
+                            button.btn.btn-primary.btn-sm(type="submit") Log in!
+                            //secondary color button that redirects to login page
+                            a.btn.btn-secondary.btn-sm(href="/signup") Don't have an account? Sign up
