Signup form look updated, not pushing all data to database

--- a/src/views/signup.pug
+++ b/src/views/signup.pug
@@ -25,6 +25,12 @@ html
                             input.form-control.form-control-sm(name="id" type="text" required placeholder="User ID")
                         .mb-3
                             input.form-control.form-control-sm(name="password" type="password" required placeholder="Password")
+                        .mb-3
+                            input.form-control.form-control-sm(name="name" type="text" required placeholder="Name")
+                        .mb-3
+                            input.form-control.form-control-sm(name="email" type="text" required placeholder="Email")
+                        .mb-3
+                            input.form-control.form-control-sm(name="UDid" type="text" required placeholder="UDid")            
                         //d-grid stretches signup button across entire signup box
                         .d-grid.gap-2
                             //btn makes button, btn-primary colors it blue, btn-sm makes it smaller
