Test account deletion

--- a/src/views/protected_page.pug
+++ b/src/views/protected_page.pug
@@ -36,4 +36,4 @@ html
 
                             //new container with auto top margin
                             .mt-auto.pt-5
-                                a.btn.btn-danger.btn-lg(href="") Delete Account
+                                a.btn.btn-danger.btn-lg(href="/deleteaccount") Delete Account
