--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,8 +1,8 @@
 html 
     head
         title Login
-        link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css")
-    body 
+        link(rel="stylesheet" href="/css/theme.min.css")
+    body.bg-light
         //center content and create top margin of 5 units
         .container.mt-5
             //conditional message display
@@ -15,7 +15,7 @@ html
                 //take up 4 flexbox columns /12 on medium screen, 8 on small screens
                 .col-md-4.col-sm-8
                     //center text and 4 unit bottom margin
-                    h2.text-center.mb-4 Log in
+                    h2.text-center.mb-4.text-primary Log in
                     //create signup box with border, 4 unit padding, round corners, drop shadow
                     form(action="/login" method="POST" class="border p-4 rounded shadow")
                         //bottom margin of 3 between form elements
