--- a/src/views/protected_page.pug
+++ b/src/views/protected_page.pug
@@ -1,8 +1,7 @@
 html 
     head 
         title Protected page 
-        //load bootstrap CSS framework from cdn
-        link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css")
+        link(rel="stylesheet" href="/css/theme.min.css")
         if message 
             //creates message box highlighted in red
             body.text-center 
@@ -16,7 +15,7 @@ html
                             //primary color button that redirects to login page
                             a.btn.btn-primary.btn-lg(href="/login") Login
         else 
-            body.text-center 
+            body.text-center.bg-light
                 //center content and create top margin of 5 units
                 .cover-container.d-flex.min-vh-100.p-3.mx-auto.flex-column
                     //center content
@@ -25,7 +24,7 @@ html
                         .col-md-6.col-sm-8
                             //main content at top of page
                             //center text and 4 unit bottom margin
-                            h2.text-center.mb-4 Welcome #{id}!
+                            h2.text-center.mb-4.text-primary Welcome #{id}!
                             h4.text-center.mb-4 Want to logout?
 
                             //secondary color button that redirects to login page
