--- a/src/views/protected_page.pug
+++ b/src/views/protected_page.pug
@@ -31,7 +31,12 @@ html
                             a.btn.btn-secondary.btn-lg(href="/logout") Logout
 
                             //spacer to push delete button to bottom
-                            .flex-grow-1 
+                            .flex-grow-2 
+
+                            //secondary color button that redirects to edit page
+                            a.btn.btn-secondary.btn-lg(href="/edit_profile") Edit User Info
+                            
+                            .flex-grow-1
 
                             //new container with auto top margin
                             .mt-auto.pt-5
