--- a/src/views/protected_page.pug
+++ b/src/views/protected_page.pug
@@ -5,7 +5,7 @@ html
         if message 
             //creates message box highlighted in red
             body.text-center 
-                .cover-container.d-flex.vh-100.p-3.mx-auto.flex-column
+                .container-fluid
                     //center content
                     .row.justify-content-center
                         //take up 6 flexbox columns on medium screen, 8 columns on small screen
@@ -16,19 +16,19 @@ html
                             a.btn.btn-primary.btn-lg(href="/login") Login
         else 
             body.text-center.bg-light
-                //center content and create top margin of 5 units
-                .cover-container.d-flex.min-vh-100.p-3.mx-auto.flex-column
-                    //center content
+                //create container that spans viewport
+                .container-fluid
+                    //center content in container
                     .row.justify-content-center
                         //take up 4 flexbox columns /12 on medium screen, 8 on small screens
                         .col-md-6.col-sm-8
                             //main content at top of page
                             //center text and 4 unit bottom margin
-                            h2.text-center.mb-4.text-primary Welcome #{id}!
+                            h2.text-center.mb-4.mt-4.text-primary Welcome #{id}!
                             h4.text-center.mb-4 Want to logout?
 
                             //secondary color button that redirects to login page
-                            a.btn.btn-secondary.btn-lg(href="/logout") Logout
+                            a.btn.btn-secondary.btn-lg.mb-2(href="/logout") Logout
 
                             //spacer to push delete button to bottom
                             .flex-grow-2 
@@ -37,7 +37,13 @@ html
                             a.btn.btn-secondary.btn-lg(href="/edit_profile") Edit User Info
                             
                             .flex-grow-1
-
-                            //new container with auto top margin
+                //create footer
+                footer
+                    //create container spanning viewport
+                    .container-fluid 
+                        //center content
+                        .row.justify-content-center
                             .mt-auto.pt-5
-                                a.btn.btn-danger.btn-lg(href="/deleteaccount") Delete Account
+                                a.btn.btn-danger.btn-lg(href="/deleteaccount") Delete Account     
+
+                    
