--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -7,3 +7,5 @@ $light: #FFFFFF;
 
 // Default Theme Colors
 @import '../../node_modules/bootstrap/scss/bootstrap';
+
+//all bootstrap code sourced from https://getbootstrap.com/docs/5.3/getting-started/introduction/
