--- a/src/views/edit_profile.pug
+++ b/src/views/edit_profile.pug
@@ -1,3 +1,5 @@
+//all bootstrap code sourced from https://getbootstrap.com/docs/5.3/getting-started/introduction/
+
 html 
     head 
         title Protected page 
@@ -18,10 +20,13 @@ html
             body.bg-light
         .cover-container.d-flex.min-vh-100.p-3.mx-auto.flex-column
             .container
+                //center content
                 .row.justify-content-center
                     .col-md-6
+                        //display alert message if new userID already taken
                         if alert 
                             .alert.alert-danger #{alert.message}
+                        //form box
                         form(action="/edit_profile" method="POST")
                             .card(class='h-100').mb-4
                                 .card-body
