--- a/src/views/protected_page.pug
+++ b/src/views/protected_page.pug
@@ -1,3 +1,5 @@
+//all bootstrap code sourced from https://getbootstrap.com/docs/5.3/getting-started/introduction/
+
 html 
     head 
         title Protected page 
