--- a/src/views/admin.pug
+++ b/src/views/admin.pug
@@ -1,53 +1,58 @@
-html
-    head
-        title Admin page
-        link(rel="stylesheet" href="/css/theme.min.css")
-        
-    if message 
-            //creates message box highlighted in red
-            body.text-center 
-                .container-fluid
-                    //center content
-                    .row.justify-content-center
-                        //take up 6 flexbox columns on medium screen, 8 columns on small screen
-                        .col-md-6.col-sm-8
-                            //display loaded message as a red alert
-                            .alert.alert-danger #{message}
-                            //primary color button that redirects to login page
-                            a.btn.btn-primary.btn-lg(href="/logout") Logout
-    else 
-        body.text-center.bg-light
-            // create container that spans viewport
+head
+    title Admin page
+    link(rel="stylesheet" href="/css/theme.min.css")
+
+if message 
+        // creates message box highlighted in red
+        body.text-center 
             .container-fluid
-                // center content in container
+                // center content
                 .row.justify-content-center
-                    // take up 4 flexbox columns /12 on medium screen, 8 on small screens
+                    // take up 6 flexbox columns on medium screen, 8 columns on small screen
                     .col-md-6.col-sm-8
-                        // main content at top of page
-                        // center text and 4 unit bottom margin
-                        h2.text-center.mb-4.mt-4.text-primary Welcome #{id}!
-                        // New title for admin page
-                        h3.text-center.mb-4.text-success Welcome to the admin page
-                        // New green button that says Hola
-                        a.btn.btn-success.btn-lg.mb-3(href="#") Hola
-                        h4.text-center.mb-4 Want to logout?
+                        // display loaded message as a red alert
+                        .alert.alert-info #{message}
+                        
+body.text-center.bg-light
+        // create container that spans viewport
+        .container-fluid
+            // center content in container
+            .row.justify-content-center
+                // take up 4 flexbox columns /12 on medium screen, 8 on small screens
+                .col-md-10.col-sm-12
+                    // main content at top of page
+                    // center text and 4 unit bottom margin
+                    h2.text-center.mb-4.mt-4.text-primary Welcome #{id}!
+                    // New title for admin page
+                    h3.text-center.mb-4.text-success Welcome to the admin page
 
-                        // secondary color button that redirects to logout page
-                        a.btn.btn-secondary.btn-lg.mb-2(href="/logout") Logout
+                    // Table displaying users
+                    table.table.table-bordered
+                        thead
+                            tr
+                                th Username
+                                th Email
+                                th Status
+                                th Toggle Status
+                        tbody
+                            each user in users
+                                tr
+                                    td #{user.id}
+                                    td #{user.email}
+                                    td #{user.Disabled ? 'Disabled' : 'Enabled'}
+                                    td
+                                        form(action="/admin/toggle", method="post")
+                                            input(type="hidden", name="userId", value=user.id)
+                                            button.btn.btn-warning(type="submit") #{user.Disabled ? 'Enable' : 'Disable'}
 
-                        // spacer to push delete button to bottom
-                        .flex-grow-2 
+                    // secondary color button that redirects to logout page
+                    a.btn.btn-secondary.btn-lg.mb-2(href="/logout") Logout
 
-                        // secondary color button that redirects to edit page
-                        a.btn.btn-secondary.btn-lg(href="/edit_profile") Edit User Info
+                    // spacer to push edit button to bottom
+                    .flex-grow-2
 
-                        .flex-grow-1
+                    
 
-            // create footer
-            footer
-                // create container spanning viewport
-                .container-fluid 
-                    // center content
-                    .row.justify-content-center
-                        .mt-auto.pt-5
-                            a.btn.btn-danger.btn-lg(href="/deleteaccount") Delete Account
+        // create footer
+        footer
+            
