--- a/src/public/views/chat.pug
+++ b/src/public/views/chat.pug
@@ -6,6 +6,7 @@ html(lang="en")
         title Chat Application
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css")
+        link(rel="stylesheet" href="/css/theme.min.css")
         script(src="/socket.io/socket.io.js")
         script(src="/js/socket-client.js")
         script(src="/js/chat-page.js")
