--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -16,7 +16,7 @@ $light: #FFFFFF;
     font-family: "SanFrancisco";
     font-size: 1.25rem;
     margin: 0 auto 1rem;
-    max-width: 400px;
+    max-width: 1200px;
     padding: 0.5rem 1.5rem;
 }
 
@@ -127,11 +127,11 @@ body {
     margin: 0;
 }
 
-.container {
-    margin: 0 auto;
-    max-width: 600px;
-    padding: 1rem;
-}
+// .container {
+//     margin: 0 auto;
+//     max-width: 1200px;
+//     padding: 1rem;
+// }
 
 h1 {
     font-weight: normal;
