--- a/src/public/views/login.pug
+++ b/src/public/views/login.pug
@@ -7,7 +7,7 @@ html
         // Include the Socket.IO client library
         script(src="/socket.io/socket.io.js")
         // Include your custom client-side script
-        script(src="/js/client.js")
+        script(src="/js/socket-client.js")
     body.bg-light
         //center content and create top margin of 5 units
         .container.mt-5
