fix: sent messages display in correct chat window

--- a/src/public/views/chat.pug
+++ b/src/public/views/chat.pug
@@ -22,9 +22,9 @@ html(lang="en")
                             i.fas.fa-user
                         button.btn.rounded-circle.nav-btn#globalBtn(title="Global Chat" data-chat-type="global")
                             i.fas.fa-globe
-                        button.btn.rounded-circle.nav-btn#groupBtn(title="Group Chats" data-chat-type="groups")
+                        button.btn.rounded-circle.nav-btn#groupBtn(title="Group Chats" data-chat-type="group")
                             i.fas.fa-users
-                        button.btn.rounded-circle.nav-btn#dmBtn(title="Direct Messages" data-chat-type="dms")
+                        button.btn.rounded-circle.nav-btn#dmBtn(title="Direct Messages" data-chat-type="dm")
                             i.fas.fa-comments
                         button.btn.rounded-circle.nav-btn#settingsBtn(title="Settings" data-chat-type="settings")
                             i.fas.fa-cog
