--- a/production/public/views/protected_page.pug
+++ b/production/public/views/protected_page.pug
@@ -35,6 +35,12 @@ html
                             //spacer to push delete button to bottom
                             .flex-grow-2 
 
+                            //secondary color button that redirects to chat page
+                            a.btn.btn-secondary.btn-lg.mb-2(href="/chat") Chats
+
+                            //spacer to push delete button to bottom
+                            .flex-grow-2 
+
                             //secondary color button that redirects to edit page
                             a.btn.btn-secondary.btn-lg(href="/edit_profile") Edit User Info
                             
