autoscroll should be working but isn't

--- a/src/public/views/chat.pug
+++ b/src/public/views/chat.pug
@@ -74,7 +74,7 @@ html(lang="en")
                             
 
                     //- Chat Messages Area
-                    .chat-messages.p-3.bg-light
+                    .chat-messages.p-3.bg-light.vh-75.overflow-auto
                         #globalChat.chat-type.active
                             //- Messages will be loaded here
                         #dmChat.chat-type.d-none 
