--- a/src/public/views/signup.pug
+++ b/src/public/views/signup.pug
@@ -17,7 +17,8 @@ html
                 //take up 4 flexbox columns /12 on medium screen, 8 on small screens
                 .col-md-4.col-sm-8
                     //center text and 4 unit bottom margin
-                    h2.text-center.mb-4.text-primary Signup
+                    h1.text-center.mb-4.text-primary Yapper
+                    h4.text-center.mb-4.text-primary Signup
                     //create signup box with border, 4 unit padding, round corners, drop shadow
                     form(action="/signup" method="POST" class="border p-4 rounded shadow")
                         //bottom margin of 3 between form elements
