Slight UI tweaks

--- a/src/public/views/chat.pug
+++ b/src/public/views/chat.pug
@@ -59,7 +59,7 @@ html(lang="en")
                 .col-auto.bg-white.border-end.vh-100#usersList(style="width: 280px;")
                     .d-flex.flex-column.h-100
                         .p-3.border-bottom
-                            h5.mb-3 Online Users
+                            h5.mb-3 All Users
                             .position-relative
                                 i.fas.fa-search.search-icon
                                 input.form-control.search-input#userSearch(type="text" placeholder="Search users...")
