--- a/src/public/views/login.pug
+++ b/src/public/views/login.pug
@@ -2,7 +2,7 @@
 
 html 
     head
-        title Yapper Login
+        title Yapper: clear mind, simple chat.
         link(rel="stylesheet" href="/css/theme.min.css")
         // Include the Socket.IO client library
         script(src="/socket.io/socket.io.js")
@@ -21,8 +21,8 @@ html
                 //take up 4 flexbox columns /12 on medium screen, 8 on small screens
                 .col-md-4.col-sm-8
                     //center text and 4 unit bottom margin
-                    h1.text-center.mb-4.text-primary Yapper 
-                    h4.text-center.mb-4.text-primary Log In
+                    img(src='../images/yapperlogo.png' class="rounded mx-auto d-block" alt='yapperlogo' style='width:200px; height:200px;')
+                    h5.text-center.mb-4.text-primary clear mind, simple chat.
                     //create signup box with border, 4 unit padding, round corners, drop shadow
                     form(action="/login" method="POST" class="border p-4 rounded shadow")
                         //bottom margin of 3 between form elements
@@ -36,4 +36,6 @@ html
                             //btn makes button, btn-primary colors it blue, btn-sm makes it smaller
                             button.btn.btn-primary.btn-sm(type="submit") Log in!
                             //secondary color button that redirects to login page
-                            a.btn.btn-secondary.btn-sm(href="/signup") Don't have an account? Sign up
+                            .text-center.mt-2
+                                | Don't have an account? 
+                                a.text-secondary(href="/signup") Sign up!
