--- a/src/public/views/chat.pug
+++ b/src/public/views/chat.pug
@@ -18,7 +18,6 @@ html(lang="en")
                 //- Sidebar Navigation
                 .col-auto.bg-white.border-end.vh-100.d-flex.flex-column(style="width: 70px;")
                     .nav.flex-column.flex-grow-1.justify-content-start.align-items-center.py-3.gap-3
-                        img(src='../images/yapperlogo.png' class="rounded mx-auto d-block" alt='yapperlogo' style='width:50px; height:50px;')
                         a.button.btn.rounded-circle.nav-btn#profileBtn(title="Profile" href="/protected_page" )
                             i.fas.fa-user
                         button.btn.rounded-circle.nav-btn#globalBtn(title="Global Chat" data-chat-type="global")
@@ -75,7 +74,7 @@ html(lang="en")
                             
 
                     //- Chat Messages Area
-                    .chat-messages.p-3.bg-light.vh-75.overflow-auto
+                    .chat-messages.p-3.bg-light
                         #globalChat.chat-type.active
                             //- Messages will be loaded here
                         #dmChat.chat-type.d-none 
