--- a/src/public/views/signup.pug
+++ b/src/public/views/signup.pug
@@ -2,7 +2,7 @@
 
 html 
     head 
-        title Yapper Signup 
+        title Signup 
         link(rel="stylesheet" href="/css/theme.min.css")
     body.bg-light
         //center content and create top margin of 5 units
@@ -17,8 +17,8 @@ html
                 //take up 4 flexbox columns /12 on medium screen, 8 on small screens
                 .col-md-4.col-sm-8
                     //center text and 4 unit bottom margin
-                    img(src='../images/yapperlogo.png' class="rounded mx-auto d-block" alt='yapperlogo' style='width:200px; height:200px;')
-                    h5.text-center.mb-4.text-primary start yapping today.
+                    h1.text-center.mb-4.text-primary Yapper
+                    h4.text-center.mb-4.text-primary Signup
                     //create signup box with border, 4 unit padding, round corners, drop shadow
                     form(action="/signup" method="POST" class="border p-4 rounded shadow")
                         //bottom margin of 3 between form elements
@@ -38,6 +38,4 @@ html
                             //btn makes button, btn-primary colors it blue, btn-sm makes it smaller
                             button.btn.btn-primary.btn-sm(type="submit") Sign up!
                             //secondary color button that redirects to login page
-                            .text-center.mt-2
-                                | Already have an account? 
-                                a.text-secondary(href="/login") Sign in!
+                            a.btn.btn-secondary.btn-sm(href="/login") Already have an account? Login
