--- a/src/public/css/chat.css
+++ b/src/public/css/chat.css
@@ -138,8 +138,6 @@ body {
     margin-left: 8px;
 }
 
-
-.dm-button:hover {
-    background-color: rgba(109, 84, 184, 0.1) !important;
-    border-radius: 4px;
+.contact-item:hover .dm-button {
+    opacity: 1;
 }
