--- a/src/public/views/chat.pug
+++ b/src/public/views/chat.pug
@@ -18,6 +18,7 @@ html(lang="en")
                 //- Sidebar Navigation
                 .col-auto.bg-white.border-end.vh-100.d-flex.flex-column(style="width: 70px;")
                     .nav.flex-column.flex-grow-1.justify-content-start.align-items-center.py-3.gap-3
+                        img(src='../images/yapperlogo.png' class="rounded mx-auto d-block" alt='yapperlogo' style='width:50px; height:50px;')
                         a.button.btn.rounded-circle.nav-btn#profileBtn(title="Profile" href="/protected_page" )
                             i.fas.fa-user
                         button.btn.rounded-circle.nav-btn#globalBtn(title="Global Chat" data-chat-type="global")
@@ -26,8 +27,7 @@ html(lang="en")
                             i.fas.fa-users
                         button.btn.rounded-circle.nav-btn#dmBtn(title="Direct Messages" data-chat-type="dm")
                             i.fas.fa-comments
-                        button.btn.rounded-circle.nav-btn#settingsBtn(title="Settings" data-chat-type="settings")
-                            i.fas.fa-cog
+
                     .nav.justify-content-center.py-3
                         a.btn.rounded-circle.nav-btn#logoutBtn(href="/logout" title="Logout")
                             i.fas.fa-sign-out-alt
